--- a/index.html
+++ b/index.html
@@ -131,9 +131,20 @@
   <button onclick="nextPage()">Continuar</button>
 </div>
 
+<!-- Página 6 -->
+<div class="page">
+  <p>
+    O que eu sinto por você é algo que quero viver só entre nós dois,<br>
+    sem interferências, sem pressão, sem opiniões de fora.<br>
+    Quero que você pense com calma, do seu jeito,<br>
+    e dê a resposta que fizer seu coração ficar em paz.
+  </p>
+  <button onclick="nextPage()">Continuar</button>
+</div>
+
 <!-- Página Final -->
 <div class="page">
-  <h1>Quer tentar isso comigo? 💖</h1>
+  <h1>Quer namorar comigo? 💙</h1>
 
   <form action="https://formspree.io/f/mbdrnjdj" method="POST">
     <input type="hidden" name="resposta" value="Sim">
@@ -158,7 +169,7 @@
 
   function tocarMusica() {
     const iframe = document.getElementById("music");
-    iframe.src = "https://www.youtube.com/embed/1f2F4r0b6ts?autoplay=1&loop=1&playlist=1f2F4r0b6ts";
+    iframe.src = "https://www.youtube.com/embed/N5TVWZfRfIs?autoplay=1&loop=1&playlist=N5TVWZfRfIs";
   }
 </script>
 
