--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       height: 100vh;
       padding: 30px;
       text-align: center;
-      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -67,7 +66,7 @@
     .btns {
       display: flex;
       gap: 20px;
-      margin-top: 30px;
+      margin-top: 25px;
     }
 
     .no {
@@ -79,7 +78,7 @@
       width: 260px;
       max-width: 85%;
       border-radius: 20px;
-      margin: 25px 0;
+      margin: 20px 0;
       box-shadow: 0 12px 30px rgba(0,0,0,0.25);
     }
 
@@ -152,12 +151,8 @@
     <button onclick="next()">Continuar</button>
   </div>
 
-  <!-- Página 4 (vídeo) -->
+  <!-- Página 4 -->
   <div class="page">
-    <video class="video" autoplay muted loop playsinline>
-      <source src="video.mp4" type="video/mp4">
-    </video>
-
     <p>
       Mesmo com a distância,
       o que eu sinto por você é real.
@@ -169,9 +164,19 @@
     <button onclick="next()">Continuar</button>
   </div>
 
-  <!-- Página 5 (pedido) -->
+  <!-- Página 5 (pedido + vídeo) -->
   <div class="page">
-    <h1>Você quer namorar comigo? 💖</h1>
+    <video id="finalVideo" class="video" muted loop playsinline>
+      <source src="video.mp4" type="video/mp4">
+    </video>
+
+    <p>
+      Se você falar que <strong>SIM</strong>,
+      a gente pode ser igual esses macaquinhos 🐒💞
+    </p>
+
+    <h1>Você quer namorar comigo?</h1>
+
     <div class="btns">
       <button onclick="resposta('SIM')">Sim</button>
       <button class="no" onclick="resposta('NÃO')">Não</button>
@@ -200,6 +205,15 @@
       pages[current].classList.remove('active');
       current++;
       pages[current].classList.add('active');
+
+      // quando chegar na última página, toca o vídeo
+      if (current === pages.length - 1) {
+        const v = document.getElementById("finalVideo");
+        if (v) {
+          v.currentTime = 0;
+          v.play();
+        }
+      }
     }
 
     function resposta(valor) {
