--- a/index.html
+++ b/index.html
@@ -1,247 +1,244 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Tenho algo pra te perguntar…</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Tenho algo pra te perguntar…</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:Arial,sans-serif;
+}
 
-    body {
-      background: linear-gradient(180deg, #fdeff2, #f8d7e5);
-      height: 100vh;
-      overflow: hidden;
-    }
+body{
+  background:linear-gradient(180deg,#fdeff2,#f8d7e5);
+  min-height:100vh;
+  overflow:hidden;
+}
 
-    .page {
-      display: none;
-      height: 100vh;
-      padding: 30px;
-      text-align: center;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+/* páginas normais */
+.page{
+  display:none;
+  min-height:100vh;
+  padding:30px;
+  text-align:center;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
 
-    .page.active {
-      display: flex;
-    }
+.page.active{
+  display:flex;
+}
 
-    /* libera scroll só na última página */
-    .page.final {
-      overflow-y: auto;
-    }
+/* última página NÃO tem altura fixa */
+.page.final{
+  min-height:auto;
+  padding:40px 20px 60px;
+}
 
-    h1 {
-      font-size: 1.9rem;
-      margin: 20px 0;
-      color: #4a2c3a;
-    }
+h1{
+  font-size:1.9rem;
+  margin:20px 0;
+  color:#4a2c3a;
+}
 
-    p {
-      font-size: 1.1rem;
-      max-width: 650px;
-      color: #4a2c3a;
-      line-height: 1.6;
-    }
+p{
+  font-size:1.1rem;
+  max-width:650px;
+  color:#4a2c3a;
+  line-height:1.6;
+}
 
-    button {
-      margin-top: 25px;
-      padding: 14px 30px;
-      border: none;
-      border-radius: 30px;
-      background: #e75480;
-      color: #fff;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+button{
+  margin-top:25px;
+  padding:14px 30px;
+  border:none;
+  border-radius:30px;
+  background:#e75480;
+  color:#fff;
+  font-size:1rem;
+  cursor:pointer;
+  transition:.3s;
+}
 
-    button:hover {
-      transform: scale(1.05);
-      background: #d6456f;
-    }
+button:hover{
+  transform:scale(1.05);
+  background:#d6456f;
+}
 
-    .btns {
-      display: flex;
-      gap: 20px;
-      margin: 30px 0;
-    }
+.btns{
+  display:flex;
+  gap:20px;
+  margin:30px 0;
+}
 
-    .no {
-      background: #999;
-    }
+.no{
+  background:#999;
+}
 
-    /* Vídeo */
-    .video {
-      width: 260px;
-      max-width: 85%;
-      border-radius: 20px;
-      margin: 20px 0;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
-    }
+/* vídeo */
+.video{
+  width:260px;
+  max-width:90%;
+  border-radius:20px;
+  margin:20px 0;
+  box-shadow:0 12px 30px rgba(0,0,0,.25);
+}
 
-    /* Volume */
-    .volume {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      opacity: 0.6;
-    }
+/* volume */
+.volume{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  opacity:.6;
+}
 
-    /* Flores */
-    .flower {
-      position: absolute;
-      top: -50px;
-      font-size: 22px;
-      animation: fall linear infinite;
-      opacity: 0.7;
-    }
+/* flores */
+.flower{
+  position:absolute;
+  top:-50px;
+  font-size:22px;
+  animation:fall linear infinite;
+  opacity:.7;
+}
 
-    @keyframes fall {
-      to {
-        transform: translateY(110vh) rotate(360deg);
-      }
-    }
-  </style>
+@keyframes fall{
+  to{
+    transform:translateY(120vh) rotate(360deg);
+  }
+}
+</style>
 </head>
 
 <body>
 
-  <!-- Música -->
-  <audio id="music" loop>
-    <source src="musica.mp3" type="audio/mpeg">
-  </audio>
+<audio id="music" loop>
+  <source src="musica.mp3" type="audio/mpeg">
+</audio>
 
-  <!-- Página 1 -->
-  <div class="page active">
-    <h1>Oi…</h1>
-    <p>
-      Desde o dia em que a gente começou a conversar,
-      eu senti que algo em mim tinha mudado.
-      Não sei exatamente o que mudou em mim,
-      mas pretendo descobrir isso junto com você.
-    </p>
-    <button onclick="start()">Continuar</button>
+<!-- Página 1 -->
+<div class="page active">
+  <h1>Oi…</h1>
+  <p>
+    Desde o dia em que a gente começou a conversar,
+    eu senti que algo em mim tinha mudado.
+    Não sei exatamente o que mudou,
+    mas pretendo descobrir isso junto com você.
+  </p>
+  <button onclick="start()">Continuar</button>
+</div>
+
+<!-- Página 2 -->
+<div class="page">
+  <p>
+    Eu não sei explicar em palavras tudo o que sinto,
+    mas sei que estar com você faz tudo parecer surreal.
+    Quando estou com você, eu esqueço do mundo.
+  </p>
+  <button onclick="next()">Continuar</button>
+</div>
+
+<!-- Página 3 -->
+<div class="page">
+  <p>
+    Você me prende com o seu sorriso,
+    com o seu olhar,
+    com o seu jeitinho.
+    <br><br>
+    Com você tudo é novo,
+    e eu gosto muito disso.
+  </p>
+  <button onclick="next()">Continuar</button>
+</div>
+
+<!-- Página 4 -->
+<div class="page">
+  <p>
+    Mesmo com a distância,
+    o que eu sinto por você é real.
+    Eu quero algo simples,
+    verdadeiro,
+    só entre eu e você —
+    sem interferência de ninguém.
+  </p>
+  <button onclick="next()">Continuar</button>
+</div>
+
+<!-- Página FINAL -->
+<div class="page final">
+  <video id="finalVideo" class="video" muted loop playsinline>
+    <source src="video.mp4" type="video/mp4">
+  </video>
+
+  <p>
+    Se você falar que <strong>SIM</strong>,
+    a gente pode ser igual esses macaquinhos 🐒💞
+  </p>
+
+  <h1>Você quer namorar comigo?</h1>
+
+  <div class="btns">
+    <button onclick="resposta('SIM')">Sim</button>
+    <button class="no" onclick="resposta('NÃO')">Não</button>
   </div>
+</div>
 
-  <!-- Página 2 -->
-  <div class="page">
-    <p>
-      Eu não sei explicar em palavras tudo o que sinto,
-      mas sei que estar com você faz tudo parecer surreal.
-      Sempre que estou com você,
-      eu esqueço do mundo.
-    </p>
-    <button onclick="next()">Continuar</button>
-  </div>
+<div class="volume">
+  <input type="range" min="0" max="1" step="0.01" value="0.25"
+         oninput="music.volume=this.value">
+</div>
 
-  <!-- Página 3 -->
-  <div class="page">
-    <p>
-      Você me prende com o seu sorriso,
-      com o seu olhar,
-      com o seu jeitinho.
-      <br><br>
-      O mais incrível é que com você tudo é novo.
-      Você não me lembra ninguém que já passou pela minha vida…
-      e eu gosto muito disso.
-    </p>
-    <button onclick="next()">Continuar</button>
-  </div>
+<script>
+const pages=document.querySelectorAll('.page');
+let current=0;
+const music=document.getElementById('music');
 
-  <!-- Página 4 -->
-  <div class="page">
-    <p>
-      Mesmo com a distância,
-      o que eu sinto por você é real.
-      Eu quero algo simples,
-      verdadeiro,
-      só entre eu e você —
-      sem interferência de ninguém.
-    </p>
-    <button onclick="next()">Continuar</button>
-  </div>
+function start(){
+  music.volume=.25;
+  music.play();
+  next();
+  flowers();
+}
 
-  <!-- Página 5 FINAL -->
-  <div class="page final">
-    <video id="finalVideo" class="video" muted loop playsinline>
-      <source src="video.mp4" type="video/mp4">
-    </video>
+function next(){
+  pages[current].classList.remove('active');
+  current++;
+  pages[current].classList.add('active');
 
-    <p>
-      Se você falar que <strong>SIM</strong>,
-      a gente pode ser igual esses macaquinhos 🐒💞
-    </p>
-
-    <h1>Você quer namorar comigo?</h1>
-
-    <div class="btns">
-      <button onclick="resposta('SIM')">Sim</button>
-      <button class="no" onclick="resposta('NÃO')">Não</button>
-    </div>
-  </div>
-
-  <!-- Controle de volume -->
-  <div class="volume">
-    <input type="range" min="0" max="1" step="0.01" value="0.25"
-           oninput="music.volume = this.value">
-  </div>
-
-  <script>
-    const pages = document.querySelectorAll('.page');
-    let current = 0;
-    const music = document.getElementById("music");
-
-    function start() {
-      music.volume = 0.25;
-      music.play();
-      next();
-      flowers();
+  if(current===pages.length-1){
+    const v=document.getElementById('finalVideo');
+    if(v){
+      v.currentTime=0;
+      v.play();
     }
+  }
+}
 
-    function next() {
-      pages[current].classList.remove('active');
-      current++;
-      pages[current].classList.add('active');
+function resposta(valor){
+  fetch("https://formspree.io/f/mbdrnjdj",{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({ resposta:valor })
+  });
+  alert("Resposta enviada 💌");
+}
 
-      // toca o vídeo na última página
-      if (current === pages.length - 1) {
-        const v = document.getElementById("finalVideo");
-        if (v) {
-          v.currentTime = 0;
-          v.play();
-        }
-      }
-    }
-
-    function resposta(valor) {
-      fetch("https://formspree.io/f/mbdrnjdj", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ resposta: valor })
-      });
-      alert("Resposta enviada 💌");
-    }
-
-    function flowers() {
-      setInterval(() => {
-        const f = document.createElement("div");
-        f.classList.add("flower");
-        f.innerText = Math.random() > 0.5 ? "🌸" : "🌹";
-        f.style.left = Math.random() * 100 + "vw";
-        f.style.animationDuration = 5 + Math.random() * 5 + "s";
-        document.body.appendChild(f);
-        setTimeout(() => f.remove(), 10000);
-      }, 500);
-    }
-  </script>
+function flowers(){
+  setInterval(()=>{
+    const f=document.createElement("div");
+    f.className="flower";
+    f.innerText=Math.random()>0.5?"🌸":"🌹";
+    f.style.left=Math.random()*100+"vw";
+    f.style.animationDuration=5+Math.random()*5+"s";
+    document.body.appendChild(f);
+    setTimeout(()=>f.remove(),10000);
+  },600);
+}
+</script>
 
 </body>
 </html>
